remove position fixed on the main nav and add new button on mobile which slide on the mobile bar links

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -39,7 +39,7 @@ html {
   }
 
   .navigation {
-    position: fixed;
+    // position: fixed;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -127,10 +127,40 @@ html {
       transform: translateX(100%);
       transition: transform .5s ease-in;
       background-color:  #302b2bee;
+      position: fixed;
+      z-index: 10;
 
       &--open {
         transform: translateX(0%);
       }
+
+      &-buttonOpen {
+        position: fixed;
+        position: absolute;
+        left: -30px;
+        height: 25px;
+        width: 30px;
+        border-top-left-radius: 50%;
+        border-bottom-left-radius: 50%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 0;
+        background-color: #302b2bee;
+        outline: none;
+
+        &::after {
+          content: '';
+          width: 30%;
+          height: 30%;
+          border-radius: 50%;
+          background-color:  rgb(191, 150, 96);
+          z-index: 1;
+          position: absolute;
+        }
+      }
+      
+     
     }
   
     &__item {
@@ -182,6 +212,7 @@ html {
         align-items: center;
         background-color: transparent;
         transform: translateX(0%);
+        position: relative;
       }
 
       &__item {
@@ -596,5 +627,3 @@ html {
 // sprawdz ten hamburger usun div
 
 
-.music-wrapper {
-}
